[gd_scene load_steps=2 format=3 uid="uid://bg7m866vwrclp"]

[ext_resource type="Script" uid="uid://c0criakqeh07y" path="res://Scripts/lobby_inter.gd" id="1_mmc2u"]

[node name="LobbyInter" type="Node2D"]
script = ExtResource("1_mmc2u")

[node name="Create" type="Button" parent="."]
offset_left = 258.0
offset_top = 299.0
offset_right = 353.0
offset_bottom = 348.0
text = "create"

[node name="Inventory" type="Button" parent="."]
offset_left = 706.0
offset_top = 140.0
offset_right = 801.0
offset_bottom = 189.0
text = "inventory"

[node name="Button" type="Button" parent="."]
offset_left = 606.0
offset_top = 278.0
offset_right = 712.0
offset_bottom = 336.0
text = "back"

[connection signal="button_down" from="Create" to="." method="_on_create_button_down"]
[connection signal="button_down" from="Inventory" to="." method="_on_inventory_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
